# knowledge-base

./: .gitignore  Makefile  README.md  create_link_heap.py  document_my_github_repos.py  pull_github_repos.py  pyproject.toml  query.py  temp.py  to_migrate.md
.obsidian/: workspace.json
obsidian-vault/: A Survey on Uncertainty Quantification of Large Language Models - Taxonomy, Open Research Challenges, and Future Directions.md  Advanced Python - Build Hands-on Projects with Design Patterns.md  Adversarial Attacks on LLMs.md  Agentic RAG.md  Approaches to LLM app development.md  Attentive Reasoning Queries (ARQ) by Parlant.md  BTYD Modelling.md  Bounded contexts.md  CIDI Prompting Strategy.md  Cache-Augmented Generation (CAG).md  Catching up with AI coding practices start of 2026.md  ChatGPT Prompt Engineering for Developers (DeepLearning.AI course).md  Choosing a LLM Agent Framework.md  Chronos - Learning the Language of Time Series.md  Code Assessment Rubric.md  Cognitive Architectures for Language Agents (CoALA).md  Customer Lifetime Value (CLV,CLTV).md  Data Dictionaries in PostgreSQL.md  Data Engineering Thesaurus.md  Dependency Injection.md  Dex Horthy's Create Plan Prompt.md  Dex Horthy's Research Codebase Prompt.md  Different LLM tool use paradigms.md  Domain Adaptation of LLMs.md  Domain-Driven Design (DDD).md  Effective harnesses for long-running agents (Anthropic Engineering Blog).md  Event storming.md  Future Reading.md  Fuzzy Logic.md  GEPA - Reflective Prompt Evolution Can Outperform Reinforcement Learning.md  Golden Resources.md  Good API Design.md  (+69 more)
(+138 files in other folders)
