[project]
name = "knowledge-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ # https://huggingface.co/arkohut/jina-embeddings-v3
 "openai>=1.70.0",
 "streamlit>=1.44.1",
]

[dependency-groups]
dev = ["ipython>=8.29.0", "mypy>=1.13.0", "wat-inspector>=0.4.2"]
